<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_background"
    tools:context="com.jun.financialrecords.AddRecordsActivity">

    <LinearLayout
        android:id="@+id/ar_invest_type_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_1"
            android:text="@string/invest_type"/>
        <TextView
            android:id="@+id/ar_invest_type_tx"
            android:layout_marginLeft="8dp"
            android:textColor="@color/text_color_1"
            android:textSize="14sp"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/next_arrow_icon"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/list_separator"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_1"
            android:text="@string/invest_name"/>
        <EditText
            android:id="@+id/ar_invest_name_ed"
            android:layout_marginLeft="8dp"
            android:gravity="right"
            android:textSize="14sp"
            android:textColor="@color/text_color_1"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/list_separator"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_1"
            android:text="@string/invest_amount"/>
        <EditText
            android:id="@+id/ar_invest_amount_ed"
            android:layout_marginLeft="8dp"
            android:gravity="right"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:textColor="@color/text_color_1"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/list_separator"
        />
    <LinearLayout
        android:id="@+id/ar_invest_date_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_1"
            android:text="@string/invest_date"/>
        <TextView
            android:id="@+id/ar_invest_date_tx"
            android:layout_marginLeft="8dp"
            android:gravity="right"
            android:textSize="14sp"
            android:textColor="@color/text_color_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/list_separator"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <Button
            android:id="@+id/ar_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textColor="@color/text_color_1"
            android:text="@string/add"/>
    </RelativeLayout>
</LinearLayout>
