<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jun.financialrecords.ProjectDetailAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_1"
            android:text="@string/amount_a"/>
        <EditText
            android:id="@+id/pda_invest_amount_ed"
            android:layout_marginLeft="8dp"
            android:gravity="right"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:textColor="@color/text_color_1"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/list_separator"
        />
    <LinearLayout
        android:id="@+id/pda_invest_date_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_1"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/pda_invest_date_tx"
            android:layout_marginLeft="8dp"
            android:gravity="right"
            android:textSize="14sp"
            android:textColor="@color/text_color_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/list_separator"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <Button
            android:id="@+id/pda_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textColor="@color/text_color_1"
            android:text="@string/add"/>
    </RelativeLayout>

</LinearLayout>
